gas/testsuite/gas/aarch64/tls.s
@@ -51,3 +51,6 @@ func:
 	add  x0, x1, #:tprel_hi12:var, lsl #12
 	// R_AARCH64_TLSLE_ADD_TPREL_LO12_NC    var
 	add  x0, x1, #:tprel_lo12_nc:var
+
+	movz x0, #:tprel_g1:var
+	movk x0, #:tprel_g0_nc:var
